# ms-dropshipping-market-research

./: .gitignore  BRIEF-floating-pond-lake-fountains-2026-06-24.md  LICENSE  README.md  SKILL.md  VALIDATION.md  luxury-high-ticket-shortlist-2026-06-24.md  package.sh  research.sh
.claude-plugin/: marketplace.json  plugin.json
briefs/: ergonomic-standing-desks-2026-06-18.md
engine/: .env.example  CONVENTIONS.md  PLAN.md  README.md  pipeline.yaml  pyproject.toml
engine/src/niche_research/: __init__.py  cli.py  config.py  pipeline.py
engine/src/niche_research/agents/: _sdk.py  base.py  community.py  competition.py  demand.py  discovery.py
engine/src/niche_research/brief/: SCHEMA.md  models.py  writer.py
engine/src/niche_research/services/: __init__.py  orchestrator.py
hooks/: ensure_engine_installed.sh  hooks.json
skills/ms-dropshipping-market-research/: REVIEW_CRITERIA.md  SKILL.md
